// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications index test snapshots loading 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c7 svg {
  height: 24px;
  width: 24px;
}

.c7 svg path.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c7 svg.sources {
  fill: none !important;
}

.c7 svg.sources rect {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c7.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c7.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c7 .c15 {
  margin-left: 4px;
}

.c7 img {
  width: 24px;
}

.c11 svg {
  height: 16px;
  width: 16px;
}

.c11 svg path.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11 svg.sources {
  fill: none !important;
}

.c11 svg.sources rect {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c11.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11 .c15 {
  margin-left: 4px;
}

.c11 img {
  width: 16px;
}

.c14 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c10.MuiButton-outlined {
  padding: 8px 12px;
  border-color: #d8d8d8;
}

.c5 {
  height: 40px;
  width: 40px;
}

.c5.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c5.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c4 {
  padding-right: 12px;
}

.c13 {
  padding: calc(24px - 4px) 24px;
  background-color: rgba(255,255,255,0.7);
  color: #737373;
  border-radius: 0 0 8px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 a {
  color: #00b3ec;
}

.c0 {
  width: 100%;
  margin: 0 auto;
}

.c8 {
  padding: 24px;
  background-color: #fff;
  border-radius: 8px 8px 0 0;
  height: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
  height: 32px;
}

.c3 {
  color: #fff;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 300px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  font-size: 20px;
  height: 80px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 12px 0 24px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
  background: inherit;
}

.c1 .MuiListItemIcon-root {
  min-width: 30px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > .actionButton.btn {
  margin-right: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 count-header"
    >
      <div
        class="c2"
      >
        <div
          class="makeStyles-path-18"
          style="align-items: center;"
        >
          <span
            class="c3 makeStyles-labelLink-22"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class="c4"
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c5"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c6 c7"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      id="content-wrapper"
      style="display: flex; flex-direction: column; width: calc(100% - 4px); max-height: calc(100vh - 80px); overflow-wrap: normal; overflow-x: scroll; padding: 0px 12px; margin: 0px auto;"
    >
      <div
        class="c8"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between;"
        >
          <div
            class="c9"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 actionButton btn MuiButton-outlinedPrimary MuiButton-disableElevation"
              id="add-application"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="c6 c11"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </div>
                </span>
                ADD AN APPLICATION
              </span>
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <div
                  class="c6 c11 makeStyles-externalIcon-17"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </div>
                GO TO OPEN PULL REQUESTS
              </span>
            </button>
          </div>
        </div>
        <div
          class="c12 "
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px; color: rgb(0, 179, 236);"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <div>
          Need help? Raise a 
          <a
            class="c14"
            href="https://support.weave.works/helpdesk/"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="c15 c16"
              color="primary"
            >
              support ticket
            </span>
          </a>
        </div>
        <div
          class=""
        >
          Weave GitOps Enterprise 
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applications index test snapshots success 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
  width: 100%;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c43 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c34 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c39 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 20px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #737373;
}

.c40 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 12px;
  font-weight: 600;
  text-transform: capitalize;
  font-style: normal;
  color: #737373;
}

.c7 svg {
  height: 24px;
  width: 24px;
}

.c7 svg path.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c7 svg.sources {
  fill: none !important;
}

.c7 svg.sources rect {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c7.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c7.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c7 .c33 {
  margin-left: 4px;
}

.c7 img {
  width: 24px;
}

.c11 svg {
  height: 16px;
  width: 16px;
}

.c11 svg path.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11 svg.sources {
  fill: none !important;
}

.c11 svg.sources rect {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c11.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c11.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c11 .c33 {
  margin-left: 4px;
}

.c11 img {
  width: 16px;
}

.c26 svg {
  fill: #737373;
  height: 24px;
  width: 24px;
}

.c26 svg path.path-fill {
  fill: #737373 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c26 svg.sources {
  fill: none !important;
}

.c26 svg.sources rect {
  stroke: #737373 !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c26.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c26.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c26 .c33 {
  margin-left: 4px;
  color: #737373;
}

.c26 img {
  width: 24px;
}

.c32 svg {
  fill: #d8d8d8;
  height: 16px;
  width: 16px;
}

.c32 svg path.path-fill {
  fill: #d8d8d8 !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c32 svg.sources {
  fill: none !important;
}

.c32 svg.sources rect {
  stroke: #d8d8d8 !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c32.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c32.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c32 .c33 {
  margin-left: 4px;
  color: #d8d8d8;
}

.c32 img {
  width: 16px;
}

.c22 {
  padding: 4px;
}

.c42 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10.MuiButton-root {
  height: 32px;
  font-size: 12px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c10.MuiButton-outlined {
  padding: 8px 12px;
  border-color: #d8d8d8;
}

.c19.MuiButton-root {
  border-radius: 50%;
  min-width: 38px;
  height: 38px;
  padding: 0;
}

.c19.MuiButton-text {
  padding: 0;
}

.c20.MuiButton-outlined {
  border-color: #d8d8d8;
}

.c20.MuiButton-root {
  border-radius: 0;
  min-width: 0;
  height: initial;
  padding: 7px 0px;
}

.c20.MuiButton-text {
  padding: 0;
}

.c21 {
  position: absolute;
  overflow: hidden;
  background: white;
  height: 0px;
  -webkit-transition: height 0.2s ease-in;
  transition: height 0.2s ease-in;
  z-index: 1;
}

.c35 {
  position: relative;
  height: 100%;
  width: 0px;
  left: 24px;
  -webkit-transition-property: width,left;
  transition-property: width,left;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c35.open {
  left: 0px;
  width: 350px;
}

.c36 {
  background: rbga(255,255,255,0.75);
  height: 100%;
  width: 100%;
  border-left: 2px solid #d8d8d8;
  padding: 24px;
  padding-left: 32px;
}

.c38 .MuiListItem-gutters {
  padding-left: 0px;
}

.c38 .MuiCheckbox-root {
  padding: 0px;
}

.c38 .MuiCheckbox-colorSecondary.Mui-checked {
  color: #00b3ec;
}

.c24 {
  height: 40px;
  padding: 4px 0px;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: auto;
}

.c24 .MuiChip-root {
  margin-right: 4px;
}

.c27 {
  width: 0px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  margin-left: 4px;
}

.c27.expanded {
  width: 200px;
}

.c30 td {
  text-align: center;
}

.c29.MuiButton-root {
  margin: 0;
  text-transform: none;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.c29.MuiButton-text {
  min-width: 0px;
}

.c29.MuiButton-text .selected {
  color: #1a1a1a;
}

.c29.arrow {
  min-width: 0px;
}

.c16 {
  max-width: 100%;
}

.c25 {
  position: relative;
  padding: 0 12px;
}

.c13 {
  width: 100%;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: hidden;
}

.c13 h2 {
  padding: 8px;
  font-size: 12px;
  font-weight: 600;
  color: #737373;
  margin: 0px;
  white-space: nowrap;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c13 .MuiTableRow-root {
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c13 .MuiTableRow-root:not(.MuiTableRow-head):hover {
  background: #f5f5f5;
  -webkit-transition: background 0.5s ease-in-out;
  transition: background 0.5s ease-in-out;
}

.c13 table {
  margin-top: 12px;
}

.c13 th {
  padding: 0;
  background: #F6F7F9;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c13 th .MuiCheckbox-root {
  padding: 4px 9px;
}

.c13 td {
  padding-left: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c13 .filter-options-chip {
  background-color: #E5F7FD;
}

.c14 td:nth-child(7) {
  white-space: pre-wrap;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.c5 {
  height: 40px;
  width: 40px;
}

.c5.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c5.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c4 {
  padding-right: 12px;
}

.c41 {
  padding: calc(24px - 4px) 24px;
  background-color: rgba(255,255,255,0.7);
  color: #737373;
  border-radius: 0 0 8px 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c41 a {
  color: #00b3ec;
}

.c0 {
  width: 100%;
  margin: 0 auto;
}

.c8 {
  padding: 24px;
  background-color: #fff;
  border-radius: 8px 8px 0 0;
  height: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
  height: 32px;
}

.c3 {
  color: #fff;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 300px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  font-size: 20px;
  height: 80px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 12px 0 24px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
  background: inherit;
}

.c1 .MuiListItemIcon-root {
  min-width: 30px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 > .actionButton.btn {
  margin-right: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 count-header"
    >
      <div
        class="c2"
      >
        <div
          class="makeStyles-path-34"
          style="align-items: center;"
        >
          <span
            class="c3 makeStyles-labelLink-38"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class="c4"
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c5"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c6 c7"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      id="content-wrapper"
      style="display: flex; flex-direction: column; width: calc(100% - 4px); max-height: calc(100vh - 80px); overflow-wrap: normal; overflow-x: scroll; padding: 0px 12px; margin: 0px auto;"
    >
      <div
        class="c8"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between;"
        >
          <div
            class="c9"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 actionButton btn MuiButton-outlinedPrimary MuiButton-disableElevation"
              id="add-application"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <div
                    class="c6 c11"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </div>
                </span>
                ADD AN APPLICATION
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <div
                  class="c6 c11 makeStyles-externalIcon-33"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                    />
                  </svg>
                </div>
                GO TO OPEN PULL REQUESTS
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
        <div
          class="c12 c13 c14 $de7736a788c0c71d$var$AutomationsTable"
        >
          <div
            class="c15 c16"
          >
            <div
              class="c17 $52441885c75ba9c5$var$CheckboxActions"
            >
              <div
                class="$4d7d782bef2eb187$var$SyncButton"
                style="position: relative; display: inline-block;"
              >
                <div
                  class="c18"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                    disabled=""
                    style="margin-right: 0px;"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Sync
                    </span>
                  </button>
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined c19 c20 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <div
                        class="c6 c11"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                    </span>
                  </button>
                </div>
                <div
                  class="c18 c21"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation"
                    style="white-space: nowrap;"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      Sync Without Source
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
              <div
                class="c22"
              />
              <div
                class=""
                title="Suspend Selected"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <div
                      class="c6 c7"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
                        />
                      </svg>
                    </div>
                  </span>
                </button>
              </div>
              <div
                class="c22"
              />
              <div
                class=""
                title="Resume Selected"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined c10 MuiButton-outlinedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <div
                      class="c6 c7"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8 5v14l11-7z"
                        />
                      </svg>
                    </div>
                  </span>
                </button>
              </div>
              <div
                class="c22"
              />
            </div>
            <div
              class="c23 c24 $9121bed0097d59fd$var$ChipGroup"
            />
            <div
              class="c6 c25"
            >
              <div
                class="c6 $621c541edae1f860$var$SearchField"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-text c19 $621c541edae1f860$var$SearchField MuiButton-colorInherit MuiButton-disableElevation"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <div
                      class="c6 c26"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="c27 "
                >
                  <form>
                    <div
                      class="MuiFormControl-root MuiTextField-root $66a683f19021b9f2$var$Input"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="table-search"
                          placeholder="Search"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-text c19 MuiButton-colorInherit MuiButton-disableElevation"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <div
                    class="c6 c26"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                      />
                    </svg>
                  </div>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="c28"
          >
            <div
              class="MuiTableContainer-root"
            >
              <table
                aria-label="simple table"
                class="MuiTable-root"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-checked-46 Mui-checked MuiIconButton-colorPrimary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-48"
                            data-indeterminate="false"
                            type="checkbox"
                            value=""
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Name
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Kind
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Namespace
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Tenant
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Cluster
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Source
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class="selected"
                            >
                              Status
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          class="c6 c11 downward"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                            />
                          </svg>
                        </div>
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Message
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Revision
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head"
                      scope="col"
                    >
                      <div
                        class="c17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-text c10 c29 MuiButton-colorInherit MuiButton-disableElevation"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            <h2
                              class=""
                            >
                              Last Updated
                            </h2>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                        <div
                          class="c22"
                        />
                        <div
                          style="width: 16px;"
                        />
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root c30"
                    colspan="10"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body"
                      colspan="10"
                    >
                      <div
                        class="c31"
                      >
                        <div
                          class="c6 c32"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11H7v-2h10v2z"
                            />
                          </svg>
                        </div>
                        <div
                          class="c22"
                        />
                        <span
                          class="c33 c34"
                          color="neutral30"
                        >
                          No data
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="c35"
              data-testid="container"
            >
              <div
                class="c36"
              >
                <div
                  class="c37 c38"
                >
                  <div
                    class="c23"
                  >
                    <span
                      class="c33 c39"
                      color="neutral30"
                    >
                      Filters
                    </span>
                  </div>
                  <form
                    class="$311205a5eac77e9e$var$ControlledForm"
                  >
                    <ul
                      class="MuiList-root MuiList-padding"
                    >
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-47 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-48"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="clusterName"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c33 c40"
                              color="neutral30"
                            >
                              cluster
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-47 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-48"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="namespace"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c33 c40"
                              color="neutral30"
                            >
                              namespace
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-47 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-48"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="status"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c33 c40"
                              color="neutral30"
                            >
                              status
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-47 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-48"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="tenant"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c33 c40"
                              color="neutral30"
                            >
                              tenant
                            </span>
                          </li>
                        </ul>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters"
                      >
                        <ul
                          class="MuiList-root MuiList-padding"
                        >
                          <li
                            class="MuiListItem-root MuiListItem-gutters"
                          >
                            <div
                              class="MuiListItemIcon-root"
                            >
                              <span
                                aria-disabled="true"
                                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-47 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
                                tabindex="-1"
                              >
                                <span
                                  class="MuiIconButton-label"
                                >
                                  <input
                                    class="PrivateSwitchBase-input-48"
                                    data-indeterminate="false"
                                    disabled=""
                                    id="type"
                                    type="checkbox"
                                    value=""
                                  />
                                  <svg
                                    aria-hidden="true"
                                    class="MuiSvgIcon-root"
                                    focusable="false"
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </div>
                            <span
                              class="c33 c40"
                              color="neutral30"
                            >
                              type
                            </span>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c41"
      >
        <div>
          Need help? Raise a 
          <a
            class="c42"
            href="https://support.weave.works/helpdesk/"
            rel="noreferrer"
            target="_blank"
          >
            <span
              class="c33 c43"
              color="primary"
            >
              support ticket
            </span>
          </a>
        </div>
        <div
          class=""
        >
          Weave GitOps Enterprise 
        </div>
      </div>
    </div>
  </div>
</div>
`;
